--- a/bootstrap_sandbox_starter/5_4_tooltips.html
+++ b/bootstrap_sandbox_starter/5_4_tooltips.html
@@ -88,29 +88,30 @@
     <!--###################START HERE######################-->
 
     <!-- TOOLTIPS -->
-    <button class="btn btn-primary">Tooltip On Top</button>
-    <button class="btn btn-success">Tooltip On Right</button>
-    <button class="btn btn-warning">Tooltip On Bottom</button>
-    <button class="btn btn-danger">Tooltip On Left</button>
+    <button class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Tooltip on Top">Tooltip On Top</button>
+    <button class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on Right">Tooltip On Right</button>
+    <button class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Tooltip on Bottom">Tooltip On Bottom</button>
+    <button class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Tooltip on Left">Tooltip On Left</button>
 
     <br>
     <br>
 
     <!-- TOOLTIPS WITH HTML -->
-    <button class="btn btn-primary">Tooltip On With HTML</button>
+    <button id="hello" class="btn btn-primary" data-toggle="tooltip" data-placement="left"
+            data-html="true" title="<h3>hello</h3>">Tooltip On With HTML</button>
 
     <hr>
 
     <!-- TRIGGER WITH JS -->
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onClick="showTooltip()">
       Show Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onClick="hideTooltip()">
       Hide Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onClick="toggleTooltip()">
       Toggle Tooltip
     </button>
 
@@ -125,6 +126,38 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
   <script>
+    $('[data-toggle="tooltip"]').tooltip();
+
+    function showTooltip()
+    {
+      $('#hello').tooltip('show');
+    }
+
+    function hideTooltip()
+    {
+      $('#hello').tooltip('hide');
+    }
+
+    function toggleTooltip()
+    {
+      $('#hello').tooltip('toggle');
+    }
+
+    $('#hello').on('show.bs.tooltip', function() {
+      console.log("Tooltip Show")
+    })
+
+    $('#hello').on('shown.bs.tooltip', function() {
+      console.log("Tooltip Shown")
+    })
+
+    $('#hello').on('hide.bs.tooltip', function() {
+      console.log("Tooltip Hide")
+    })
+
+    $('#hello').on('hidden.bs.tooltip', function() {
+      console.log("Tooltip Hidden")
+    })
 
   </script>
 </body>
